--- a/package.json
+++ b/package.json
@@ -5,13 +5,25 @@
   "main": "index.js",
   "dependencies": {
     "pg": "^7.4.1",
+    "typeorm": "^0.1.12",
+    "@nestjs/common": "latest",
+    "@nestjs/core": "^4.5.10",
+    "@nestjs/microservices": "^4.5.8",
+    "@nestjs/testing": "^4.5.5",
+    "@nestjs/websockets": "^4.5.8",
+    "redis": "^2.7.1",
     "reflect-metadata": "^0.1.12",
-    "typeorm": "^0.1.12"
+    "rxjs": "^5.5.6",
+    "typescript": "^2.6.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/node": "^9.3.0",
+    "nodemon": "^1.14.1",
+    "ts-node": "^4.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/index.ts"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
