--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "pg": "^7.4.1",
-    "typeorm": "^0.1.12",
-    "@nestjs/common": "latest",
-    "@nestjs/core": "^4.5.10",
-    "@nestjs/microservices": "^4.5.8",
-    "@nestjs/testing": "^4.5.5",
+    "@nestjs/common": "^4.6.4",
+    "@nestjs/core": "^4.6.4",
+    "@nestjs/microservices": "^4.6.4",
+    "@nestjs/testing": "^4.6.1",
     "@nestjs/websockets": "^4.5.8",
-    "redis": "^2.7.1",
+    "pg": "^7.4.1",
+    "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
-    "typescript": "^2.6.2"
+    "typeorm": "^0.1.12",
+    "typescript": "^2.7.2"
   },
   "devDependencies": {
     "@types/node": "^9.3.0",
