--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
     "typeorm": "^0.1.12",
-    "typescript": "^2.7.2"
+    "typescript": "^2.7.2",
+    "@nestjs/typeorm": "latest"
   },
   "devDependencies": {
     "@types/node": "^9.3.0",
