--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,9 +2,9 @@
   "type": "postgres",
   "host": "localhost",
   "port": 5432,
-  "username": "test",
-  "password": "test",
-  "database": "test",
+  "username": "postrges",
+  "password": "postrges",
+  "database": "postgres",
   "synchronize": true,
   "logging": false,
   "entities": [
