--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "@nestjs/core": "^4.6.4",
     "@nestjs/microservices": "^4.6.4",
     "@nestjs/testing": "^4.6.1",
+    "@nestjs/typeorm": "^2.0.0",
     "@nestjs/websockets": "^4.5.8",
     "pg": "^7.4.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.6",
-    "typeorm": "^0.1.12",
-    "typescript": "^2.7.2",
-    "@nestjs/typeorm": "latest"
+    "typeorm": "^0.1.14",
+    "typescript": "^2.7.2"
   },
   "devDependencies": {
     "@types/node": "^9.3.0",
