--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "@nestjs/common": "^4.6.4",
-    "@nestjs/core": "^4.6.4",
-    "@nestjs/microservices": "^4.6.4",
+    "@nestjs/common": "^4.6.5",
+    "@nestjs/core": "^4.6.5",
+    "@nestjs/microservices": "^4.6.5",
+    "@nestjs/mongoose": "^3.0.1",
     "@nestjs/testing": "^4.6.1",
     "@nestjs/typeorm": "^2.0.0",
-    "@nestjs/websockets": "^4.5.8",
+    "@nestjs/websockets": "^4.6.5",
     "mongodb": "^3.0.3",
     "pg": "^7.4.1",
     "redis": "^2.8.0",
