Crate multiple connections through Providers and tokens. Work on exception handlers

--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
     "@nestjs/testing": "^4.6.6",
     "@nestjs/typeorm": "^2.0.0",
     "@nestjs/websockets": "^4.6.6",
-    "mongodb": "^3.0.4",
+    "mongodb": "^3.0.7",
     "pg": "^7.4.1",
     "redis": "^2.8.0",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^5.5.7",
-    "typeorm": "^0.1.16",
-    "typescript": "^2.7.2"
+    "rxjs": "^5.5.10",
+    "typeorm": "^0.2.0",
+    "typescript": "^2.8.1",
+    "reflect-metadata": "^0.1.12"
   },
   "devDependencies": {
-    "@types/node": "^9.4.7",
-    "nodemon": "^1.17.2",
-    "ts-node": "^4.1.0"
+    "@types/node": "^9.6.5",
+    "nodemon": "^1.17.3",
+    "ts-node": "^6.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
