--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
     "pg": "^7.4.1",
     "redis": "^2.8.0",
     "rxjs": "^5.5.10",
-    "typeorm": "^0.2.0",
+    "typeorm": "^0.2.7",
     "typescript": "^2.8.1",
-    "reflect-metadata": "^0.1.12"
+    "reflect-metadata": "^0.1.12",
+    "bcrypt": "latest"
   },
   "devDependencies": {
     "@types/node": "^9.6.5",
-    "nodemon": "^1.17.3",
+    "nodemon": "^1.17.5",
     "ts-node": "^6.0.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
   "repository": {
