--- a/real-chat-app/package.json
+++ b/real-chat-app/package.json
@@ -18,7 +18,11 @@
     "@angular/core": "^6.0.7",
     "@angular/forms": "^6.0.7",
     "@angular/http": "^6.0.7",
+    "mydatepicker": "^2.6.3",
+    "ng2-pagination": "^2.0.2",
+    "moment": "^2.22.2",
     "@angular/material": "^6.3.1",
+    "angular2-notifications": "^1.0.2",
     "@angular/platform-browser": "^6.0.7",
     "@angular/platform-browser-dynamic": "^6.0.7",
     "@angular/router": "^6.0.7",
@@ -38,14 +42,9 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
+    "@types/socket.io-client": "^1.4.32",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~1.7.1",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1"
   },
