--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^5.5.10",
+    "socket.io": "^2.1.1",
+    "socket.io-redis": "^5.2.0",
     "ts-md5": "^1.2.4",
     "typeorm": "^0.2.7",
     "typescript": "^2.8.1"
