--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
   "name": "realchat",
   "version": "1.0.0",
-  "description": "",
+  "description": "Chat",
   "main": "index.js",
   "dependencies": {
     "@angular/core": "latest",
-    "@nestjs/common": "^4.6.6",
-    "@nestjs/core": "^4.6.6",
-    "@nestjs/microservices": "^4.6.6",
-    "@nestjs/mongoose": "^3.0.1",
-    "@nestjs/testing": "^4.6.6",
-    "@nestjs/typeorm": "^2.0.0",
-    "@nestjs/websockets": "^4.6.6",
-    "@types/socket.io": "^1.4.36",
+    "@nestjs/common": "^5.1.0",
+    "@nestjs/core": "^5.1.0",
+    "@nestjs/microservices": "^5.1.0",
+    "@nestjs/mongoose": "^5.0.0",
+    "@nestjs/testing": "^5.1.0",
+    "@nestjs/typeorm": "^5.0.2",
+    "@nestjs/websockets": "^5.1.0",
     "bcrypt": "latest",
     "google-auth-library": "latest",
     "joi": "^13.4.0",
     "mongodb": "^3.0.7",
     "pg": "^7.4.1",
+    "zone.js": "^0.8.26",
     "redis": "^2.8.0",
+    "mongoose": "^5.2.4",
     "reflect-metadata": "^0.1.12",
-    "rxjs": "^5.5.10",
+    "rxjs": "^6.2.2",
     "socket.io": "^2.1.1",
     "socket.io-redis": "^5.2.0",
     "ts-md5": "^1.2.4",
