--- a/real-chat-app/package.json
+++ b/real-chat-app/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --watch",
+    "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -29,6 +29,7 @@
     "@angular/router": "^6.0.7",
     "@ng-bootstrap/ng-bootstrap": "^2.2.0",
     "core-js": "^2.5.4",
+    "socket.io-client": "^2.1.1",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
