--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/cors": "^2.8.4",
     "@types/joi": "^13.3.0",
     "@types/node": "^9.6.5",
+    "@types/socket.io-redis": "^1.0.25",
     "nodemon": "^1.17.5",
     "ts-node": "^6.0.0"
   },
