--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "ts-node": "^6.0.0"
   },
   "scripts": {
-    "start": "NODE_ENV=development node index.js "
+    "start": "NODE_ENV=development node index.js ",
+    "pm": "pm2 start process.yml --watch"
   },
   "repository": {
     "type": "git",
