--- a/real-chat-app/package.json
+++ b/real-chat-app/package.json
@@ -33,7 +33,8 @@
     "hammerjs": "^2.0.8",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26",
-    "uuid": "latest"
+    "uuid": "latest",
+    "bluebird": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
