add process name, add key to the redis connection, remove extra dependencies

--- a/process.yml
+++ b/process.yml
@@ -1,7 +1,7 @@
 apps:
   - script   : index.js
     name: real-chat
-    instances: 4
+    instances: max - 1
     exec_mode: cluster
     watch  : true
     env    :
