Add remote join during creating new room.

--- a/package.json
+++ b/package.json
@@ -7,26 +7,26 @@
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
     "@nestjs/microservices": "^5.1.0",
-    "@nestjs/mongoose": "^5.0.0",
+    "@nestjs/mongoose": "^5.1.0",
     "@nestjs/testing": "^5.1.0",
     "@nestjs/typeorm": "^5.0.2",
     "@nestjs/websockets": "^5.1.0",
     "bcrypt": "latest",
+    "cors": "latest",
     "google-auth-library": "latest",
     "joi": "^13.4.0",
     "mongodb": "^3.0.7",
-    "cors": "latest",
+    "mongoose": "^5.2.7",
     "pg": "^7.4.1",
-    "zone.js": "^0.8.26",
     "redis": "^2.8.0",
-    "mongoose": "^5.2.4",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.2.2",
     "socket.io": "^2.1.1",
     "socket.io-redis": "^5.2.0",
     "ts-md5": "^1.2.4",
     "typeorm": "^0.2.7",
-    "typescript": "^2.8.1"
+    "typescript": "^2.8.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@types/config": "^0.0.34",
