--- a/development.env
+++ b/development.env
@@ -1,2 +1,5 @@
-DATABASE_USER=test
+POSTGRES_NAME=postgres
 POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=postgres
+POSTGRES_PASSWORD=postgres
