Move to docker structure, change env and hosts.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "ts-node": "^6.0.0"
   },
   "scripts": {
-    "start": "NODE_ENV=development node index.js ",
+    "start": "NODE_ENV=development node index.js",
+    "start:prod": "NODE_ENV=production node index.js",
     "pm": "pm2 start process.yml --watch"
   },
   "repository": {
